[gd_scene load_steps=7 format=3 uid="uid://bmqa5d8qqjkdr"]

[ext_resource type="Script" path="res://Scripts/sound_fx_global.gd" id="1_15k60"]
[ext_resource type="AudioStream" uid="uid://dcx4tvrp2rhfc" path="res://Audio/Sound Effects/Enemy_hitmarkerSound.wav" id="2_ijgrv"]
[ext_resource type="AudioStream" uid="uid://dy7oqa324sieb" path="res://Audio/Sound Effects/Bullet-Hit-1.wav" id="3_nj6mo"]
[ext_resource type="AudioStream" uid="uid://b1wbhgnobdrop" path="res://Audio/Sound Effects/Player_takeDmg.mp3" id="4_o815m"]
[ext_resource type="AudioStream" uid="uid://cp33teaqjlx78" path="res://Audio/Sound Effects/laser_gun_sound_40.mp3" id="5_i744n"]
[ext_resource type="AudioStream" uid="uid://dl1jalvgugvod" path="res://Audio/Sound Effects/dog_TakeDamage.mp3" id="6_lxnrd"]

[node name="SoundFX_Global" type="Node2D"]
script = ExtResource("1_15k60")

[node name="Enemies_hitmarker" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ijgrv")

[node name="Bullet_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_nj6mo")
volume_db = -7.661

[node name="Player_TakeDMG" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_o815m")

[node name="projEnemy_laser" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_i744n")
volume_db = -3.0

[node name="hurtDogFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_lxnrd")
volume_db = 2.0
